- Updated js to stop jump when clicking on an anchor in the menu  - Various tweaks to layout at mobile size

--- a/assets/sass/modules/_intro.scss
+++ b/assets/sass/modules/_intro.scss
@@ -18,6 +18,10 @@
             line-height: $ratio * 0.7;
             @include rem(margin-bottom, $base-space);
 
+            @include breakpoint($small) {
+                @include rem(font-size, $super-size);
+            }
+
             @include breakpoint($large) {
                 @include rem(margin-bottom, $mid-space);
             }
@@ -34,6 +38,8 @@
                 text-align: center;
                 @include rem(margin-bottom, $half-space);
                 margin-right: 0;
+                @include rem(padding-top, $half-space / 1.25);
+                @include rem(padding-bottom, $half-space / 1.25);
             }
         }
 
@@ -44,6 +50,11 @@
 
     .main-illustration {
         @include rem(margin-bottom, $mid-space);
+
+        @include breakpoint($small) {
+            @include rem(padding, 0, $base-space);
+            @include rem(margin-bottom, 0);
+        }
 
         @include breakpoint($large) {
             margin-bottom: 0;
